# cse-5525-final-project

./: .gitignore  2_prepare_training_data.py  3_finetune_model.py  3_shot_results.csv  3_shot_results_pretty.jsonl  4_test_model.py  5_inference.py  README.md  ReadMeGIT.txt  TrainingExamples_900.jsonl  analyze_and_compare.py  analyze_training_tokens.py  count_schema_tokens.py  finetune_qwen.py  fixed_inference_test.py  icl_evaluation_advanced.py  pyproject.toml  requirements.txt  summary_metrics.csv
data/: dev.jsonl  simulation_schema.json  train.jsonl
evaluation/: evaluation.py
icl_result/: 0_shot_results.csv  10_shot_results.csv  1_shot_results.csv  30_shot_results.csv  3_shot_results.csv  50_shot_results.csv  placeholder.txt  summary_metrics.csv
report/: .gitignore  acl_latex.tex  custom.bib
src/: data_loader.py  main.py  utils.py
src/evaluation/: eval_outputs.py  eval_pair.py  evaluation.py  spec_comparison_pairs.json
src/fine_tuning/: README_TRAINING.md  comprehensive_fea_schema.json  download_base_model.py  finetune_qwen_v2.py  icl_evaluation_advanced.py  requirements.txt
src/icl/: inference.py  sample_system_prompt.txt  sample_user_prompt.txt
