[project]
name = "cse-5525-final-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "jsonref>=1.1.0",
    "jsonschema>=4.25.1",
    "mypy>=1.19.0",
    "torch>=2.9.1",
    "transformers>=4.57.3",
    "types-jsonschema>=4.25.1.20251009",
    "zss>=1.2.0",
]

[tool.mypy]
files = "src/**/*.py"
